--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   objectbox_flutter_libs: any
   path_provider: ^2.1.5
   path: ^1.9.0
+  intl: ^0.20.1
 
 dev_dependencies:
   flutter_test:
